--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/index.ts"
+    "build": "tsc -b",
+    "start": "ts-node src/index.ts",
+    "dev":"npm run build && npm run start"
   },
   "author": "",
   "license": "ISC",
